[gd_scene load_steps=11 format=2]

[ext_resource path="res://GCS - SHD/Blocks/Flame pillar/Fire-4.png" type="Texture" id=1]
[ext_resource path="res://GCS - SHD/Blocks/Flame pillar/Fire-5.png" type="Texture" id=2]
[ext_resource path="res://GCS - SHD/Blocks/Flame pillar/Flamethrower_Base.png" type="Texture" id=3]
[ext_resource path="res://GCS - SHD/Blocks/Flame pillar/Fire-1.png" type="Texture" id=4]
[ext_resource path="res://GCS - SHD/Blocks/Flame pillar/Fire-2.png" type="Texture" id=5]
[ext_resource path="res://GCS - SHD/Blocks/Flame pillar/Fire-3.png" type="Texture" id=6]
[ext_resource path="res://Block Scenes/FlamePillar.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 127, 126.5 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "On",
"speed": 12.0
}, {
"frames": [  ],
"loop": true,
"name": "Off",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=3]
radius = 43.9234
height = 623.775

[node name="FlamePillar" type="Node2D"]
rotation = 1.5708
scale = Vector2( 0.174097, 0.159354 )
script = ExtResource( 7 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1, -0.5 )
shape = SubResource( 2 )

[node name="DeadlyPart" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="AnimatedSprite" type="AnimatedSprite" parent="DeadlyPart"]
position = Vector2( -656, 30 )
rotation = 3.44589e-15
scale = Vector2( 2.062, 1.6 )
frames = SubResource( 1 )
animation = "On"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeadlyPart"]
position = Vector2( -475.451, 6.2782 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="DeadlyPart" to="." method="_on_DeadlyPart_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
